Got first fuse file write and read test working